# MediaCodec

./: .gitmodules  CMakeLists.txt  README.md  build.sh
demo/: CMakeLists.txt  MediaTranscodeDemo.cpp  MediaTranscodeDemo.h  build.sh  main.cpp
demo/json/: build.sh
lib/: VarCompositeGlyph.hh  build.sh  buildWASM.sh  docker.sh  wchar_filename.h
lib/linux/: .gitattributes  release.url
lib/linux/x86/ffmpeg-7.0.1/lib/: .gitattributes  libavdevice.so.61.1.100  libavformat.so.61.1.100  libavutil.so.59.8.100  libpostproc.so.58.1.100  libswresample.so.5.1.100  libswscale.so.8.1.100
lib/linux/x86/ffmpeg-7.0.1/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
lib/linux/x86/ffmpeg-7.0.1/share/doc/ffmpeg/: community.html  developer.html  faq.html  fate.html  ffmpeg-all.html  ffmpeg-bitstream-filters.html  ffmpeg-codecs.html  ffmpeg-devices.html  ffmpeg-filters.html  ffmpeg-formats.html  ffmpeg-protocols.html  ffmpeg-resampler.html  ffmpeg-utils.html  ffmpeg.html  ffprobe-all.html  ffprobe.html  general.html  git-howto.html  mailing-list-faq.html  platform.html
lib/linux/x86/ffmpeg-7.0.1/share/man/man1/: ffmpeg-all.1  ffmpeg-bitstream-filters.1  ffmpeg-codecs.1  ffmpeg-devices.1  ffmpeg-filters.1  ffmpeg-formats.1  ffmpeg-protocols.1  ffmpeg-resampler.1  ffmpeg-utils.1  ffmpeg.1  ffprobe-all.1  ffprobe.1
lib/linux/x86/x264-stable/lib/: libx264.so.164
lib/linux/x86/x264-stable/lib/pkgconfig/: x264.pc
lib/linux/x86/x265_2.7/lib/: libx265.so.151
lib/linux/x86/x265_2.7/lib/pkgconfig/: x265.pc
lib/wasm/: release.url
lib/win/: release.url
prj/win/MediaCodec/: MediaCodec.sln
prj/win/MediaCodec/MediaCodec/: MediaCodec.vcxproj  MediaCodec.vcxproj.filters
prj/win/libMediaCodec/: libMediaCodec.sln
prj/win/libMediaCodec/libMediaCodec/: libMediaCodec.vcxproj  libMediaCodec.vcxproj.filters
src/: AudioDecode.cpp  AudioDecode.h  AudioEncode.cpp  AudioEncode.h  AudioRawHandle.cpp  AudioRawHandle.h  AudioTransform.cpp  AudioTransform.h  CMakeLists.txt  MediaTranscode.cpp  MediaTranscode.h  MediaTranscodeInf.cpp  VideoDecode.cpp  VideoDecode.h  VideoEncode.cpp  VideoEncode.h  VideoRawHandle.cpp  VideoRawHandle.h  VideoTransform.cpp  VideoTransform.h  YUV2RGB.cpp  YUV2RGB.h  build.sh
src/include/: MediaTranscodeCom.h  MediaTranscodeInf.h
